syntax = "proto3";

package readly.v1;

option go_package = "readly/pb/readly/v1;pb";

message GetBookRequest {
  int64 book_id = 1;
}