syntax = "proto3";

package readly.v1;

option go_package = "readly/pb/readly/v1;pb";

import "readly/v1/book.proto";

message GetBookListRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetBookListResponse {
  repeated Book books = 1;
}